# meshcore-rust

./: Cargo.toml  build.rs
src/: main.rs
