[package]
name = "esp-idf-test"
version = "0.1.0"
authors = ["Matthew Sainsbury <matthew@sainsbury.io>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-idf-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-hal = "1.0.0"
mipidsi = { version="0.9.0", features= ["batch"] }
embedded-graphics = "0.8.1"
static_cell = "2.1.0"
embedded-graphics-framebuf = "0.5.0"

[build-dependencies]
embuild = "0.33"
